Flagi dla kompilatora cl.exe

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,13 +4,11 @@ project(Motifs LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-if (APPLE)
-    set(CMAKE_CXX_COMPILER clang++)
-else ()
-    set(CMAKE_CXX_COMPILER g++)
-endif ()
-
-add_compile_options("-std=gnu++0x" "-Ofast" "-ffast-math" "-Wall" "-Wno-expansion-to-defined")
+if(WIN32)
+    add_compile_options("-std=gnu++0x" "-O3" "-ffast-math" "-Wall")
+else()
+    add_compile_options("-std=gnu++0x" "-Ofast" "-ffast-math" "-Wall" "-Wno-expansion-to-defined")
+endif()
 
 find_package(OpenMP REQUIRED)
 
